--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,29 @@
 .container {
-  max-width: 1024px;
-  margin: 8px auto;
-  padding: 0 12px;
+    max-width: 1024px;
+    margin: 8px auto;
+    padding: 0 12px;
 }
+
 .nav-link {
-  display: flex;
+    display: flex;
 }
+
 .nav-link a {
-  display: inline-block;
-  width: 120px;
-  margin-right: 12px;
-  text-align: center;
-  background-color: #396c96;
-  color: white;
+    display: inline-block;
+    width: 120px;
+    margin-right: 12px;
+    text-align: center;
+    background-color: #396c96;
+    color: white;
+    text-decoration: underline;
 }
+
 .nav-link a.active {
-  background-color:#4f94cc;
+    background-color: #4f94cc;
 }
-.nav-link a:hover, .nav-link a:focus, .nav-link a:active {
-  background-color:#4682b4;
+
+.nav-link a:hover,
+.nav-link a:focus,
+.nav-link a:active {
+    background-color: #4682b4;
 }
