--- a/src/style.scss
+++ b/src/style.scss
@@ -28,6 +28,18 @@
   color: #61dafb;
 }
 
+h4{
+  background-color: #000;
+  p{
+    a{
+      color: #fff;
+      &:hover{
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
